--- a/frontend/src/styles/appStyles.css
+++ b/frontend/src/styles/appStyles.css
@@ -5,7 +5,7 @@ html, body, #root {
   padding: 0;
   overflow: hidden;
   background-color: white;
-  font-family: 'Santoshi', sans-serif;
+  font-family: 'Open Sans', sans-serif;
 }
 
 /* Top bar styling */
@@ -15,7 +15,7 @@ html, body, #root {
   left: 0;
   width: 100%;
   height: 50px;
-  background-color: #011F26; /* dark blue */
+  background-color: #121B22; /* dark blue */
   box-shadow: 0 2px 12px #04BFBF; /* light neon blue shadow */
   display: flex;
   justify-content: center;
@@ -65,7 +65,7 @@ html, body, #root {
 .qr-icon {
   width: 28px;
   height: 28px;
-  filter: invert(10%) drop-shadow(0 0 2px #011F26);
+  filter: invert(10%) drop-shadow(0 0 2px #121B22);
 }
 
 /* Bottom navigation bar */
@@ -75,7 +75,7 @@ html, body, #root {
   left: 0;
   width: 100%;
   height: 50px;
-  background-color: #011F26; /* dark blue matching top bar */
+  background-color: #121B22; /* dark blue matching top bar */
   display: flex;
   justify-content: space-between;
   align-items: center;
